--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mongoose_skeleton",
+  "name": "workout-tracker",
   "version": "1.0.0",
-  "description": "",
+  "description": "Workout tracker using Mongo database with a Mongoose schema and handle routes with Express",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -9,7 +9,7 @@
     "watch": "nodemon server.js",
     "seed": "node seeders/seed.js"
   },
-  "author": "",
+  "author": "Rich Capuy",
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
